apps/base/zeroed/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zeroed
  labels:
    app: zeroed
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
